2008-05-15  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.init, Tests/*, examples/*: handle @leq and @geq.

2008-03-25  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: use do_unknown and unknown in pass 0 too.
	* texi2html.init, examples/makeinfo.init: honor USE_ACCESSKEY
	even if not split at node (report from Reinhold Kainhofer).
	* texi2html.pl, texi2html.init, ChangeLog: correct typo in 
	already (report from Reinhold Kainhofer).

2008-03-23  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init, doc/*, examples/makeinfo.init: 
	use accesskey attribute and link element if set in the init file.
	Add FileNext and FilePrev directions (for link, but can be used
	anywhere).
	* texi2html.pl, examples/*: change in unknown function reference API,
	now there is a pass argument to be able to handle unknown macros in 
	other passes than the last.
	* i18n/de: update translation (Reinhold Kainhofer).
	* texi2html.pl, doc/*: handle frame files like other files, and
	document them.
	* texi2html.pl, doc/*: use do_unknown and unknown in pass 1 too.

2008-03-20  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: treat the @top element like any section element, 
	except that the previous chapter is still considered to be the 
	previous element at its level.
	Find previous and next toplevel better.
	* Makefile.am,...: better handling of mediawiki tests and regenerate
	with automake 1.10.1.

2008-03-17  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: @itemize should produce bullets by
	default (report from Reinhold Kainhofer, and bugfix)
	* texi2html.init: handle @click, @clickstyle, @click, @arrow,
	@clicksequence
	* texi2html.pl: defer setting the date after all initializations
	are done.
	* texi2html.pl, texi2html.init, doc: TOC_LIST_ATTRIBUTE replaced by
	NO_BULLET_LIST_ATTRIBUTE, TOC_LIST_STYLE replaced by 
	NO_BULLET_LIST_STYLE
	* Tests/formatting/comments.texi,formatting.texi,clean.texi: