@@ -3,7 +3,7 @@ $LANGUAGES->{'fr'} = {
                        '  where the @strong{ Example } assumes that the current position is at @strong{ Subsubsection One-Two-Three } of a document of the following structure:' => '  Dans cet exemple on est @`a @strong{ Sous section un-deux-trois } dans un document dont la structure est :',
                        ' Up ' => 'Plus haut',
                        '%{acronym_like} (%{explanation})' => '',
-                       '%{month}, %{day} %{year}' => 'le %{day} %{month} %{year}',
+                       '%{month} %{day}, %{year}' => 'le %{day} %{month} %{year}',
                        '%{name} of %{class}' => '%{name} de %{class}',
                        '%{name} on %{class}' => '%{name} de %{class}',
                        '%{node_file_href}' => '',
