@@ -3,7 +3,7 @@ $LANGUAGES->{'ja'} = {
                        '  where the @strong{ Example } assumes that the current position is at @strong{ Subsubsection One-Two-Three } of a document of the following structure:' => '@strong{例}では、以下に示す構造を持つ文書の@strong{1.2.3項}を現在位置に仮定しています。',
                        ' Up ' => '上',
                        '%{acronym_like} (%{explanation})' => '',
-                       '%{month}, %{day} %{year}' => '%{year}年%{month}月%{day}日',
+                       '%{month} %{day}, %{year}' => '%{year}年%{month}月%{day}日',
                        '%{name} of %{class}' => '',
                        '%{name} on %{class}' => '',
                        '%{node_file_href}' => '',
